2017-03-07  Megan Gardner  <megan_gardner@apple.com>

        Additional DataInteraction Support
        https://bugs.webkit.org/show_bug.cgi?id=169316
        <rdar://problem/30884234>

        Reviewed by Wenson Hsieh.

        Add stub implementations to WebView for methods that handle data interaction

        * WebView/WebView.mm:
        (-[WebView _enteredDataInteraction:client:global:operation:]):
        (-[WebView _updatedDataInteraction:client:global:operation:]):
        (-[WebView _exitedDataInteraction:client:global:operation:]):
        (-[WebView _performDataInteraction:client:global:operation:]):
        (-[WebView _endedDataInteraction:global:]):
        * WebView/WebViewPrivate.h:

2017-03-07  Dean Jackson  <dino@apple.com>

        Some platforms won't be able to create a GPUDevice
        https://bugs.webkit.org/show_bug.cgi?id=169314
        <rdar://problems/30907521>

        Reviewed by Jon Lee.

        Disable WEB_GPU on the iOS Simulator.

        * Configurations/FeatureDefines.xcconfig:

2017-03-07  Maureen Daum  <mdaum@apple.com>

        Correctly check for an empty database file.
        <rdar://problem/30542242> Removing Website Data not working (WebSQL directories being left behind)
        https://bugs.webkit.org/show_bug.cgi?id=169256

        Reviewed by Brady Eidson.

        Check if the folder for an origin's WebSQL databases is empty after trying to delete
        all of its files. Currently we check if the deletedDatabaseFileCount matches the number
        of files that were in the folder. However, when we delete the actual database file in
        DatabaseTracker::deleteDatabaseFileIfEmpty(), the shm and wal files get deleted along with
        the database file, but deletedDatabaseFileCount only gets incremented once.

        * Storage/WebDatabaseManager.mm:
        (+[WebDatabaseManager removeEmptyDatabaseFiles]):
        Delete the folder if it is empty.

2017-03-06  Michael Saboff  <msaboff@apple.com>
