@@ -1,3 +1,14 @@
+2017-03-07  Simon Fraser  <simon.fraser@apple.com>
+
+        Enable SubpixelAntialiasedLayerTextEnabled by default on some versions of macOS
+        https://bugs.webkit.org/show_bug.cgi?id=169329
+
+        Reviewed by Tim Horton.
+
+        If the macOS version is > 101300, enable subpixelAntialiasedLayerTextEnabled.
+
+        * Shared/WebPreferencesDefinitions.h:
+
 2017-03-07  Dean Jackson  <dino@apple.com>
 
         Some platforms won't be able to create a GPUDevice
